--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -50,11 +50,11 @@
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/oSX78fwO'>Santander Consumer USA Careers - Associate, Business Intelligence & Reporting</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/oSX78fwO'>Santander Consumer USA Careers - Associate, Business Intelligence & Reporting</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1787295'>Job Application for Analyst- Business Intelligence at Endurance International Group - India</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retailindia/jobs/1787295'>Job Application for Analyst- Business Intelligence at Endurance International Group - India</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -152,7 +152,7 @@ Technologies Inc.</p>
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Gameloft/743999692149688-junior-business-intelligence-analyst'>Gameloft Junior Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Gameloft/743999692149688-junior-business-intelligence-analyst'>Gameloft Junior Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -225,7 +225,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oCBv9fwB&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=ne6qPKwO'>WP Engine Careers - Business Intelligence, Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oCBv9fwB&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=ne6qPKwO'>WP Engine Careers - Business Intelligence, Developer</a></h5> 
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
@@ -234,7 +234,7 @@ developing and implementing metrics and reporting to improve our business and
 <p>4 days ago ... Dorilton Capital is looking for a Business Intelligence/Data Warehouse (BI/DW) 
 Solutions Architect to design and build the firm's Data Warehouse and Business?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sumup/jobs/4209039002'>Job Application for Business Intelligence Analyst at SumUp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4209039002'>Job Application for Business Intelligence Analyst at SumUp</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -242,7 +242,7 @@ Solutions Architect to design and build the firm's Data Warehouse and Business?.
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://iland-internet-solutions-corporation.workable.com/j/56909B3D86'>iland Internet Solutions Corporation - Jobs: Enterprise Business Intelligence Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://iland-internet-solutions-corporation.workable.com/j/56909B3D86'>iland Internet Solutions Corporation - Jobs: Enterprise Business Intelligence Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Texas, United States</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -273,7 +273,7 @@ Mavenlink?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='http://medirevv.applytojob.com/apply/ZsHCtDjuay/Business-Intelligence-Analyst-Iowa'>Business Intelligence Analyst - Iowa - MediRevv - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://medirevv.applytojob.com/apply/ZsHCtDjuay/Business-Intelligence-Analyst-Iowa'>Business Intelligence Analyst - Iowa - MediRevv - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -400,7 +400,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/guildeducation/jobs/1778090'>Job Application for Senior Business Intelligence Analyst - Partnerships at Guild Education</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/guildeducation/jobs/1778090'>Job Application for Senior Business Intelligence Analyst - Partnerships at Guild Education</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -424,7 +424,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/signifyd/d6a53616-5194-4531-b1f1-5148448942ed'>Signifyd - Business Intelligence Solutions Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/signifyd/d6a53616-5194-4531-b1f1-5148448942ed'>Signifyd - Business Intelligence Solutions Developer</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -474,7 +474,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
