--- a/security.html
+++ b/security.html
@@ -116,7 +116,7 @@ to enhance cyber adversary detection, network defense, and SOC process?...</p>
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ComputerConsultantsInternational1/743999692279993-business-security-analyst-job-id-602170-'>Computer Consultants International, Inc. Business Security Analyst (Job ID: 602170) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ComputerConsultantsInternational1/743999692279993-business-security-analyst-job-id-602170-'>Computer Consultants International, Inc. Business Security Analyst (Job ID: 602170) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -134,7 +134,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://frb.referrals.selectminds.com/jobs/security-analyst-i-9378'>Security Analyst I - The Federal Reserve System Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/security-analyst-i-9378'>Security Analyst I - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -170,7 +170,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Information Security Analyst at QuintoAndar.</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/curology/jobs/1791134'>Job Application for DevOps Security Engineer  at Curology</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/curology/jobs/1791134'>Job Application for DevOps Security Engineer  at Curology</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -178,7 +178,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/guidewire-software/job/olGwafwr'>Guidewire Software, Inc. Careers - Cloud Security Engineer - San Mateo,Ca/Remote</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/guidewire-software/job/olGwafwr'>Guidewire Software, Inc. Careers - Cloud Security Engineer - San Mateo,Ca/Remote</a></h5> 
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -198,7 +198,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692214887-expert-cloud-security-architect-for-global-retail-sportswear-client'>Aroghia Group Expert Cloud Security Architect for Global Retail Sportswear Client | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692214887-expert-cloud-security-architect-for-global-retail-sportswear-client'>Aroghia Group Expert Cloud Security Architect for Global Retail Sportswear Client | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -237,7 +237,7 @@ Loading.</p>
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/E7AEE43F1B'>QuintoAndar - Jobs: Software Security Engineer - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/E7AEE43F1B'>QuintoAndar - Jobs: Software Security Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Software Security Engineer at QuintoAndar.</p>
 <hr/>
@@ -266,7 +266,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999692169917-senior-security-analyst-managed-hosting'>Merkle Inc. Senior Security Analyst, Managed Hosting | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999692169917-senior-security-analyst-managed-hosting'>Merkle Inc. Senior Security Analyst, Managed Hosting | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -282,7 +282,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FSRLLC/743999676151820-sr-network-security-engineer'>FSR, LLC. Sr Network Security Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FSRLLC/743999676151820-sr-network-security-engineer'>FSR, LLC. Sr Network Security Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -290,7 +290,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light">San Francisco, United States</span></p>
 <p>Posted on:: 2019-07-23</p>
 <hr/>
-<h5><a href='https://expedia.wd5.myworkdayjobs.com/en-US/search/job/USA---Austin-Domain-2---HomeAway/Senior-Security-Operations-Engineer_R-46184'>Senior Security Operations Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://expedia.wd5.myworkdayjobs.com/en-US/search/job/USA---Austin-Domain-2---HomeAway/Senior-Security-Operations-Engineer_R-46184'>Senior Security Operations Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Expedia. What You'll Do: Responsibilities. Responding to critical incidents, 
 threats, vulnerabilities and bring these issues to resolution; Continually create 
@@ -306,7 +306,7 @@ Review all of the job details and apply today!</p>
 <p>5 days ago ... DE, Wilmington is now hiring a Splunk Security Automation Metrics Engineer in 
 Wilmington, Delaware. Review all of the job details and apply today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://idsinternational.applytojob.com/apply/ZIwclq4mxz/AME-Security-Cooperation-Logistics-Analyst'>AM&amp;E Security Cooperation Logistics Analyst - IDS International - Career Page</a></h5> 
+<h5><a href='http://idsinternational.applytojob.com/apply/ZIwclq4mxz/AME-Security-Cooperation-Logistics-Analyst'>AM&amp;E Security Cooperation Logistics Analyst - IDS International - Career Page</a></h5> 
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -322,7 +322,7 @@ Wilmington, Delaware. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999692149365--permanent-job-application-security-engineer-with-java-j2ee-accept-visa-candidates'>Bey (Permanent Job) Application Security Engineer with JAVA/J2EE - Accept Visa Candidates | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692149365--permanent-job-application-security-engineer-with-java-j2ee-accept-visa-candidates'>Bey (Permanent Job) Application Security Engineer with JAVA/J2EE - Accept Visa Candidates | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
